nats-micro/tests/ui/v6_encrypted_response_without_feature.stderr
error: encrypted operations require the `encryption` feature
 --> tests/ui/v6_encrypted_response_without_feature.rs:6:26
  |
6 |     async fn secret() -> Encrypted<String> {
  |                          ^^^^^^^^^^^^^^^^^
