nats-micro/tests/ui/v6_encrypted_response_without_feature.rs
use nats_micro::service;

#[service(name = "demo", version = "1.0.0")]
impl Demo {
    #[request]
    async fn secret() -> Encrypted<String> {
        unreachable!()
    }
}

fn main() {}
